# jax-cfm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: linting.yaml  publish.yaml  test.yaml
docs/: conf.py  contact.rst  index.rst  license.rst  references.bib
docs/api/: cfm.rst  index.rst  ot.rst
docs/examples/: index.rst  sc_trajectories.rst
jaxcfm/: __init__.py  _types.py  conditional_flow_matching.py  optimal_transport.py
tests/: test_cfm.py  test_ot.py
